refactor: 커서 페이징으로 변경