@@ -3,69 +3,95 @@ package com.team5.catdogeats.chats.service.impl;
 import com.team5.catdogeats.auth.dto.UserPrincipal;
 import com.team5.catdogeats.chats.domain.ChatRooms;
 import com.team5.catdogeats.chats.domain.dto.ChatRoomListDTO;
+import com.team5.catdogeats.chats.domain.dto.ChatRoomPageRequestDTO;
+import com.team5.catdogeats.chats.domain.dto.ChatRoomPageResponseDTO;
 import com.team5.catdogeats.chats.mongo.repository.ChatRoomRepository;
 import com.team5.catdogeats.chats.service.ChatRoomListService;
-import com.team5.catdogeats.chats.service.ChatRoomUpdateService;
 import com.team5.catdogeats.chats.service.UserIdCacheService;
 import com.team5.catdogeats.users.domain.enums.Role;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
+import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class ChatRoomListServiceImpl implements ChatRoomListService {
-    private final ChatRoomUpdateService chatRoomUpdateService;
     private final UserIdCacheService userIdCacheService;
     private final ChatRoomRepository chatRoomRepository;
 
-    public List<ChatRoomListDTO> getAllChatRooms(UserPrincipal userPrincipal) {
+    public ChatRoomPageResponseDTO<ChatRoomListDTO> getChatRooms(UserPrincipal userPrincipal,
+                                                                 ChatRoomPageRequestDTO pageRequest) {
         try {
             // 사용자 역할 조회
-            String userId = userIdCacheService.getCachedUserId(userPrincipal.provider(), userPrincipal.providerId());
+            String userId = getUserId(userPrincipal);
             String userRole = userIdCacheService.getCachedRoleByUserId(userId);
+            log.debug("userid {}, userrole {}", userId, userRole);
 
-            List<ChatRooms> chatRooms;
+            Pageable pageable = PageRequest.of(0, pageRequest.size() + 1);
+            Instant cursor = pageRequest.getCursorAsInstant();
 
-            if (Role.ROLE_BUYER.toString().equals(userRole)) {
-                // 구매자인 경우: buyerId로 조회
-                chatRooms = chatRoomRepository.findByBuyerIdOrderByLastMessageAtDesc(userId);
-            } else if (Role.ROLE_SELLER.toString().equals(userRole)) {
-                // 판매자인 경우: sellerId로 조회
-                chatRooms = chatRoomRepository.findBySellerIdOrderByLastMessageAtDesc(userId);
-            } else {
-                throw new IllegalStateException("허용되지 않은 역할입니다: " + userRole);
+            List<ChatRooms> chatRooms = getChatRoomsWithCursor(userRole, userId, cursor, pageable);
+
+            boolean hasNext = chatRooms.size() > pageRequest.size();
+            if (hasNext) {
+                chatRooms = chatRooms.subList(0, pageRequest.size());
             }
 
-            // ChatRooms -> ChatRoomListDTO 변환
-            return chatRooms.stream()
+            // DTO 변환
+            List<ChatRoomListDTO> chatRoomDTOs = chatRooms.stream()
                     .map(room -> ChatRoomListDTO.convertToChatRoomListDTO(room, userId, userRole))
-                    .collect(Collectors.toList());
+                    .toList();
+
+
+            String nextCursor = null;
+            if (hasNext && !chatRooms.isEmpty()) {
+                ChatRooms lastRoom = chatRooms.get(chatRooms.size() - 1);
+                nextCursor = lastRoom.getLastMessageAt() != null ?
+                        lastRoom.getLastMessageAt().toString() : null;
+            }
+
+            return ChatRoomPageResponseDTO.of(
+                    chatRoomDTOs,
+                    nextCursor,
+                    hasNext,
+                    pageRequest.size());
+
 
         } catch (Exception e) {
-            log.error("전체 채팅방 목록 조회 실패");
+            log.error("전체 채팅방 목록 조회 실패", e);
             throw e;
         }
     }
 
-
-
-    /**
-     * 사용자의 전체 안읽은 메시지 개수 조회
-     */
-    public int getTotalUnreadCount(String userId) {
-        return chatRoomUpdateService.getTotalUnreadCount(userId);
+    private String getUserId(UserPrincipal userPrincipal) {
+        String userId = userIdCacheService.getCachedUserId(userPrincipal.provider(), userPrincipal.providerId());
+        if (userId == null) {
+            userIdCacheService.cacheUserIdAndRole(userPrincipal.provider(), userPrincipal.providerId());
+            userId = userIdCacheService.getCachedUserId(userPrincipal.provider(), userPrincipal.providerId());
+        }
+        return userId;
     }
 
-    /**
-     * 특정 채팅방의 안읽은 메시지 개수 조회
-     */
-    public int getRoomUnreadCount(String roomId, String userId) {
-        return chatRoomUpdateService.getUnreadCount(roomId, userId);
+    private List<ChatRooms> getChatRoomsWithCursor( String userRole,
+                                                    String userId,
+                                                    Instant cursor,
+                                                    Pageable pageable) {
+
+        if (Role.ROLE_BUYER.toString().equals(userRole)) {
+            return cursor != null ? chatRoomRepository.findByBuyerIdAndLastMessageAtLessThanOrderByLastMessageAtDesc(userId, cursor, pageable)
+                                    : chatRoomRepository.findByBuyerIdOrderByLastMessageAtDesc(userId, pageable);
+        } else if (Role.ROLE_SELLER.toString().equals(userRole)) {
+            return cursor != null ? chatRoomRepository.findBySellerIdAndLastMessageAtLessThanOrderByLastMessageAtDesc(userId, cursor, pageable)
+                                    : chatRoomRepository.findBySellerIdOrderByLastMessageAtDesc(userId, pageable);
+        } else {
+            throw new IllegalStateException("허용되지 않은 역할입니다: " + userRole);
+        }
     }
 
 }
